# stact_scout

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  action.yml  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish-pypi.yml  stack-analysis.yml  stack-scout-action.yml
examples/sample-project/: .eslintrc.json  Makefile  docker-compose.yml  package.json  tsconfig.json
examples/sample-project/api/: main.py
examples/sample-project/infrastructure/: main.tf
examples/sample-project/src/: App.tsx
examples/sample-reports/: example-output.json
src/stack_scout/: __init__.py  cli.py  scanner.py
src/stack_scout/detectors/: base.py  devops.py  frameworks.py  languages.py  patterns.py
stack_scout/: __init__.py  cli.py  models.py  scanner.py  utils.py
stack_scout/detectors/: __init__.py  base.py  build_tool_detector.py  build_tools.py  cloud_detector.py  database_detector.py  devops.py  devops_detector.py  framework_detector.py  language_detector.py  license_detector.py  package_manager_detector.py
stack_scout/formatters/: __init__.py  console_formatter.py  json_formatter.py
stack_scout/scanners/: __init__.py  file_scanner.py
tests/: __init__.py  test_cli.py  test_detectors.py  test_scanner.py
