[project]
name = "stack-scout"
version = "0.1.0"
description = "Detect technologies, frameworks, and tools used in software projects"
authors = [{name = "lukebancroft4-max"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["technology", "detection", "stack", "dependencies", "audit", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
stack-scout = "stack_scout.cli:main"

[project.urls]
Homepage = "https://github.com/lukebancroft4-max/stact_scout"
Repository = "https://github.com/lukebancroft4-max/stact_scout"
Issues = "https://github.com/lukebancroft4-max/stact_scout/issues"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
