[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stack-scout"
version = "0.1.0"
description = "Technology stack detection tool for code repositories"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Stack-Scout Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
stack-scout = "stack_scout.cli:main"

[project.urls]
Homepage = "https://github.com/lukebancroft4-max/stack_scout"
Repository = "https://github.com/lukebancroft4-max/stack_scout"

[tool.setuptools.packages.find]
where = ["."]
include = ["stack_scout*"]
exclude = ["tests*"]
